<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|top" >

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient_titlebar"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tvLoginStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/lbFacebookLogin"
            android:layout_toRightOf="@+id/ivProfilePic"
            android:gravity="center"
            android:textColor="@color/white" />

        <com.optimus.mobile.oauth.facebook.LoginButton
            android:id="@+id/lbFacebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/login_button" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rlBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlHeader"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnAccessToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/button_access_token" />

        <Button
            android:id="@+id/btnRequestInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/button_request_info" />

        <Button
            android:id="@+id/btnPostToWall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_post_to_wall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp" >

            <EditText
                android:id="@+id/etWallPostId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:inputType="none" />

            <Button
                android:id="@+id/btnDeleteWallPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/button_delete_wall_post" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp" >

            <EditText
                android:id="@+id/etlatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:hint="@string/hint_latitude"
                android:inputType="number" />

            <EditText
                android:id="@+id/etLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:hint="@string/hint_longitude"
                android:inputType="number" />

            <Button
                android:id="@+id/btnCheckIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/button_check_in" />
        </LinearLayout>

        <Button
            android:id="@+id/btnUploadPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_upload_photo" />

        <Button
            android:id="@+id/btnFqlInterface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_fql_interface" />

        <Button
            android:id="@+id/btnGraphAPI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_graph_interface" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp" >

            <EditText
                android:id="@+id/etQuery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:hint="@string/hint_query"
                android:inputType="text" />

            <EditText
                android:id="@+id/etType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:hint="@string/hint_type"
                android:inputType="text" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/button_search" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>